# ESP32-S3_study

./: DevelopBoard_log.txt  LOG-WIFI__connect_fail.txt  LOG-https_SSL+TLS_request_fail.txt  LOG-https_request_fail.txt  Net_Config.c  README.md  develop_log.docx  openssl_generated_cert.txt  ~$velop_log.docx  ~WRL0003.tmp  ~WRL0665.tmp  ~WRL3617.tmp  指令烧录的log.txt
ESP_S3_project/: CMakeLists.txt  sdkconfig  sdkconfig.old
ESP_S3_project/include/: My_GPIO_init.h  My_WIFI_init.h  My_https_request.h  My_scheme.h  My_timer_init.h
ESP_S3_project/main/: CMakeLists.txt  ESP_S3_project.c  My_GPIO_init.c  My_LED_init.c  My_WIFI_init.c  My_https_request.c  My_mcu_sleep_init.c  My_scheme.c  My_timer_init.c  My_usb_device.c  app_main.c  url.txt
ESP_S3_project/main/include/: My_GPIO_init.h  My_LED_init.h  My_WIFI_init.h  My_https_request.h  My_mcu_sleep_init.h  My_timer_init.h  My_usb_device.h
LOG-TXT/: DevelopBoard_log.txt  LOG-WIFI_connected.txt  LOG-get_time_from_SNTP_fail.txt  LOG-https_request_get.txt  LOG-memory_leak_202404221903.txt  LOG-tusb_serial_device.txt
LOG-TXT/error_running/20210213_errConfigIsr/: debug_log.txt
error_running/20210213_errConfigIsr/: ESP_S3_project.c  ESP_S3_project_1.c  debug_log_1.txt
my_cart/: certificate.pem  private.key
temp/include/: My_https_request.h  My_tinyUSB_init.h  My_usb_device.h
temp/main/: CMakeLists.txt  ESP_S3_project.c  My_GPIO_init.c  My_https_request.c  My_timer_init.c  My_tinyUSB_init.c  My_usb_device.c
